fix: text truncate css refactor

--- a/src/index.css
+++ b/src/index.css
@@ -26,4 +26,18 @@
   .content-max-width {
     max-width: 960px;
   }
+
+  .text-truncate {
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    display: -webkit-box;
+  }
+
+  .text-truncate-2 {
+    -webkit-line-clamp: 2;
+  }
+
+  .text-truncate-4 {
+    -webkit-line-clamp: 4;
+  }
 }
